--- a/py_light/code_test_ViT_training.ipynb
+++ b/py_light/code_test_ViT_training.ipynb
@@ -33,7 +33,7 @@
     "import os\n",
     "import pytorch_lightning as pl\n",
     "from torch.utils.data import DataLoader\n",
-    "from Dataset import QADataset\n",
+    "from py_light.Dataset import QADataset\n",
     "from torchvision import transforms\n",
     "\n",
     "test_transform = transforms.Compose(\n",
@@ -194,7 +194,7 @@
    ],
    "source": [
     "import torch\n",
-    "from ViT import ViT_trans\n",
+    "from py_light.ViT import ViT_trans\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
     "#torch.set_float32_matmul_precision('high')\n",
     "# 모델 인스턴스 생성\n",
