--- a/py_light/unet_train.ipynb
+++ b/py_light/unet_train.ipynb
@@ -17,7 +17,7 @@
    ],
    "source": [
     "import platform\n",
-    "from Dataset import *\n",
+    "from py_light.Dataset import *\n",
     "#os 체크 후 cuda 혹은 mps사용 or cpu\n",
     "if platform.system() == 'Darwin':\n",
     "    device = torch.device(\"mps\")\n",
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from unet import *\n",
+    "from py_light.unet import *\n",
     "model = Unet(3)\n"
    ]
   }
