--- a/code_test_Dataset.ipynb
+++ b/code_test_Dataset.ipynb
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "from py_light.Dataset import *\n",
+    "from Dataset import *\n",
     "from torchvision import transforms\n",
     "\n",
     "test_transform = transforms.Compose(\n",
