--- a/code_test_ViT_training.ipynb
+++ b/code_test_ViT_training.ipynb
@@ -33,7 +33,7 @@
     "import os\n",
     "import pytorch_lightning as pl\n",
     "from torch.utils.data import DataLoader\n",
-    "from py_light.Dataset import QADataset\n",
+    "from Dataset import QADataset\n",
     "from torchvision import transforms\n",
     "\n",
     "test_transform = transforms.Compose(\n",
